--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="This is the main geneid page from where you can access to the program description and its web server.">
+    <meta name="keywords" content="geneid, gene prediction, gene identification, gene annotation, genomic annotation, sequence analysis, sequence annotation">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-js-client-crud</title>
+    <title>GeneID Web Server</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
@@ -13,7 +15,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-js-client-crud doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but GeneID doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
